...
                color: context.actionToggleKnobBg,
              ),
            ),
          );
        }
        return GestureDetector(
          key: const Key('vpn.toggle'),
          onTap: () {
            appLogger.info('VPN Switch tapped');
            onVPNStateChange(ref, context);
          },
          child: Container(
            decoration: BoxDecoration(
...
